syntax = "proto3";

option csharp_namespace = "EmailProxy";
import 'google/protobuf/wrappers.proto';


service EmailSendService {
  rpc SendEmail (SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest{
  repeated Person person = 1;
  string subject = 2;
  string message_body = 3;
}

message Person{
  string email = 1;
  string name = 2;
}

message SendEmailResponse{
  int32 status_code = 1;
  string description = 2;
}